# ecc23_aerial_manipulation

./: CMakeLists.txt  DEVELOPMENT.md  README.md  package.xml
include/: baro_convert.hpp  simple_uav_ctl.hpp  uav_ctl.hpp  uav_joy.hpp  uav_joy_ctl.hpp
launch/: aerial_manipulator.launch.py  aerial_manipulator_movement.launch.py  aerial_manipulator_sea.launch.py  test_takeoff.launch.py  uav_dummy_move.launch.py  utils.py
scripts/: collect_data.yml  record_bag.sh  results.txt
src/: simple_uav_ctl.cpp  simple_uav_ctl_node.cpp  uav_ctl.cpp  uav_ctl_node.cpp  uav_joy.cpp  uav_joy_ctl.cpp  uav_joy_ctl_node.cpp  uav_joy_node.cpp
