<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbzirc_aerial_manipulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fzoric8@gmail.com">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <build_type>ament_cmake</build_type>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_ign</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>jlb_pid</depend>
  <depend>mbzirc_aerial_manipulation_msgs</depend>
  
  <export>
  </export>

  <!-- As a generic dependency -->


<!-- Or, as a build dependency (when using the library) -->

<!-- Or, as an exec dependency (when using the topic interface)-->

</package>
